# MPM

./: CMakeLists.txt  glad.c  readme.md
include/: border.h  constants.h  node.h  particle.h  solver.h
src/: border.cpp  main.cpp  node.cpp  particle.cpp  solver.cpp  vector.cpp
